--- a/pages/contact.css
+++ b/pages/contact.css
@@ -6,10 +6,14 @@
 }
 
 .dark-mode .contact-hero {
-    background: var(--primary-text-color);
+    background: var(--bg-shade);
+    border-bottom: 5px solid var(--accent-color);
 }
 .dark-mode .contact-hero .container h1{
-    color: var(--main-color);
+    color: var(--primary-text-color);
+}
+.dark-mode .contact-hero p {
+    color: var(--secondary-text-color);
 }
 
 .contact-hero h1 {
